--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,36 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- android:scrollbars="none" 隐藏滚动条 -->
-<!-- android:overScrollMode="never 滚动到尽头时没有阴影效果 -->
+<?xml version="1.0" encoding="utf-8"?><!-- android:scrollbars="none" 隐藏滚动条 --><!-- android:overScrollMode="never 滚动到尽头时没有阴影效果 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary" >
+    android:background="@color/colorPrimary">
     <!--全屏覆盖，因为FrameLayout默认放在左上角，覆盖后正好作为背景-->
     <!--对于LinearLayout, 是“占位”，若第一个控件就是match_parent全屏覆盖了，第二个控件就不会显示了而不是像FrameLayout一样覆盖第一个-->
     <ImageView
         android:id="@+id/bing_pic_img_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
-    <ScrollView
-        android:id="@+id/weather_scroll_view"
+        android:scaleType="centerCrop" />
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never" >
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="match_parent">
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true" >
+            android:layout_height="match_parent">
 
-            <include layout="@layout/title" />
-            <include layout="@layout/now" />
-            <include layout="@layout/forecast" />
-            <include layout="@layout/aqi" />
+            <ScrollView
+                android:id="@+id/weather_scroll_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                android:scrollbars="none">
 
-            <include layout="@layout/sugesstion" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true"
+                    android:orientation="vertical">
 
-        </LinearLayout>
-    </ScrollView>
+                    <include layout="@layout/title" />
+
+                    <include layout="@layout/now" />
+
+                    <include layout="@layout/forecast" />
+
+                    <include layout="@layout/aqi" />
+
+                    <include layout="@layout/sugesstion" />
+
+                </LinearLayout>
+            </ScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <fragment
+            android:id="@+id/drawer_choose_area_fragment"
+            android:name="com.example.administrator.coolweather.ChooseAreaFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start" >
+
+        </fragment>
+
+    </android.support.v4.widget.DrawerLayout>
+
 </FrameLayout>
