--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -21,7 +21,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp" >
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="14dp">
         
         <RelativeLayout
             android:layout_width="0dp"
@@ -38,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="5dp"
                     android:textColor="#fff"
                     android:textSize="40sp"/>
                 <TextView
@@ -64,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="5dp"
                     android:textColor="#fff"
                     android:textSize="40sp"/>
                 <TextView
