--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="AQI指数"
+                    android:text="AQI"
                     android:textColor="#fff"/>
             </LinearLayout>
         </RelativeLayout>
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="PM2.5指数"
+                    android:text="PM2.5"
                     android:textColor="#fff"/>
             </LinearLayout>
         </RelativeLayout>
